--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1093px;
+    /* height: 1093px; */
 }
 
 header .container {
