--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,9 @@ header ul li {
 .holberton_school-icon-search_1 {
     font-size: 24px;
 }
+
+@media (max-width: 680px) {
+    .get-schooled {
+        font-size: 60px;
+    }
+}
